NXT-489 Added justify-content :center for details class to solve alignment issues in mobile screen

--- a/web/src/components/Storyblok/Testimonial/shared/Testimonial.module.scss
+++ b/web/src/components/Storyblok/Testimonial/shared/Testimonial.module.scss
@@ -141,6 +141,7 @@
     @include typography.font-size(p); //TODO: Incorrect on mobile
     display: flex;
     flex-direction: column;
+    justify-content: center;
   }
 
   &__name {
